Fix bp mobile stats cards font size + alignment

--- a/apps/mobile/css/pages/_mobile-network.scss
+++ b/apps/mobile/css/pages/_mobile-network.scss
@@ -79,6 +79,22 @@
   }
 }
 
+.page--mobile-network {
+  .stat-title {
+    font-size: 0.675rem !important;
+  }
+
+  .stat-content > span {
+    font-size: 1rem !important;
+  }
+
+  .stat-footer {
+    font-size: 0.675rem !important;
+    opacity: 0.7 !important;
+    padding-top: 0 !important;
+  }
+}
+
 .body--dark {
   .page--mobile-network {
     .search-view-table {
